@@ -1,3 +1,9 @@
+2005-01-27  Davide Viti  <zinosat@tiscali.it>
+
+	* check_dit.sh: master files are spellchecked only when
+	necessary. This fixes the wrong unknown words counts and reduces
+	the size of most ${LANG}_all.txt files.
+
 2005-01-25  Davide Viti  <zinosat@tiscali.it>
 
 	* diff_stats.sh: fixed bug with delta=-1
